--- a/EmotienBot/EmotienBot/EmotienBot.csproj
+++ b/EmotienBot/EmotienBot/EmotienBot.csproj
@@ -192,6 +192,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EmotionService.cs" />
     <Compile Include="FileService.cs" />
     <Compile Include="Photo.cs" />
     <Compile Include="UserService.cs" />
