Добавлены комментарии к каждой эмоции

--- a/EmotienBot/EmotienBot/EmotienBot.csproj
+++ b/EmotienBot/EmotienBot/EmotienBot.csproj
@@ -193,6 +193,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EmotionService.cs" />
+    <Compile Include="EmotionToString.cs" />
     <Compile Include="FileService.cs" />
     <Compile Include="Photo.cs" />
     <Compile Include="UserService.cs" />
